# D-FINE

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_cn.md  convert_weight.py  id_rsa  pyproject.toml  requirements.txt  start_b0.sh  start_b2.sh  train.py
benchmark/: fifty51.py  get_info.py  requirements.txt
benchmark/TRT/: requirements.txt  trt_benchmark.py  trtinf.py
benchmark/inference/: trt_inf.py
configs/: runtime.yml
configs/dataset/: TODO.txt  coco_detection.yml  obj365_detection.yml  remap_obj365.py  resize_obj365.py
configs/dfine/: dfine_hgnetv2_b0_6x_coco.yml  dfine_hgnetv2_b1_6x_coco.yml  dfine_hgnetv2_b2_6x_coco.yml  dfine_hgnetv2_b3_6x_coco.yml  dfine_hgnetv2_b4_3x_obj365.yml  dfine_hgnetv2_b4_6x_coco.yml  dfine_hgnetv2_b5_6x_coco.yml  dfine_hgnetv2_b6_6x_coco.yml  dfine_hgnetv2_h_6x_coco.yml  dfine_hgnetv2_l_6x_coco.yml  dfine_hgnetv2_l_coco.yml  dfine_hgnetv2_m_10x_coco.yml  dfine_hgnetv2_m_coco.yml  dfine_hgnetv2_s_10x_coco.yml  dfine_hgnetv2_s_coco.yml  dfine_hgnetv2_x_6x_coco.yml  dfine_hgnetv2_x_coco.yml  dfine_r50vd_6x_coco.yml  readme.md
configs/dfine_config/: dfine_hgnetv2_b0_6x_coco.yml  dfine_hgnetv2_b1_6x_coco.yml  dfine_hgnetv2_b3_6x_coco.yml  dfine_hgnetv2_b4_6x_coco.yml  dfine_hgnetv2_x_6x_coco.yml
configs/rtdetrv2/: rtdetrv2_hgnetv2_b4_3x_obj365.yml  rtdetrv2_hgnetv2_b4_6x_coco.yml
configs/rtdetrv3/: rtdetrv2_hgnetv2_b0_6x_coco.yml  (+6 more)
dataset/: readme.md
src/: __init__.py
tools/: export_onnx.py  fifty51.py  fiftyone.py  get_info.py  remap_obj365.py  requirements.txt  resize_obj365.py  train.py  vis.py
(+90 files in other folders)
